Update the version

--- a/Behavior_Clone.ipynb
+++ b/Behavior_Clone.ipynb
@@ -2,55 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n",
-      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:50: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(24, (5, 5), padding=\"same\", activation=\"relu\", strides=(2, 2))`\n",
-      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:52: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(32, (5, 5), padding=\"same\", activation=\"relu\", strides=(2, 2))`\n",
-      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:54: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(48, (5, 5), padding=\"same\", activation=\"relu\", strides=(2, 2))`\n",
-      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:56: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(64, (3, 3), padding=\"same\", activation=\"relu\", strides=(1, 1))`\n",
-      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:58: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(64, (3, 3), padding=\"same\", activation=\"relu\", strides=(1, 1))`\n",
-      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/keras/models.py:874: UserWarning: The `nb_epoch` argument in `fit` has been renamed `epochs`.\n",
-      "  warnings.warn('The `nb_epoch` argument in `fit` '\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 27637 samples, validate on 3071 samples\n",
-      "Epoch 1/8\n",
-      "27637/27637 [==============================] - 385s 14ms/step - loss: 0.0387 - val_loss: 0.0469\n",
-      "Epoch 2/8\n",
-      "27637/27637 [==============================] - 344s 12ms/step - loss: 0.0317 - val_loss: 0.0443\n",
-      "Epoch 3/8\n",
-      "27637/27637 [==============================] - 322s 12ms/step - loss: 0.0300 - val_loss: 0.0473\n",
-      "Epoch 4/8\n",
-      "27637/27637 [==============================] - 338s 12ms/step - loss: 0.0291 - val_loss: 0.0444\n",
-      "Epoch 5/8\n",
-      "27637/27637 [==============================] - 339s 12ms/step - loss: 0.0280 - val_loss: 0.0484\n",
-      "Epoch 6/8\n",
-      "27637/27637 [==============================] - 382s 14ms/step - loss: 0.0272 - val_loss: 0.0441\n",
-      "Epoch 7/8\n",
-      "27637/27637 [==============================] - 379s 14ms/step - loss: 0.0269 - val_loss: 0.0474\n",
-      "Epoch 8/8\n",
-      "27637/27637 [==============================] - 375s 14ms/step - loss: 0.0259 - val_loss: 0.0459\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'plt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-cfe4c89794f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'model.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhistory_object\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'plt'"
+      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/sklearn/utils/fixes.py:313: FutureWarning: numpy not_equal will not check object identity in the future. The comparison did not return the same result as suggested by the identity (`is`)) and will change.\n",
+      "  _nan_object_mask = _nan_object_array != _nan_object_array\n"
      ]
     }
    ],
@@ -72,32 +32,81 @@
     "    for line in reader:\n",
     "        samples.append(line)\n",
     "\n",
-    "images = []\n",
-    "angles = []\n",
-    "for sample in samples:\n",
-    "    center_angle = float(sample[3])\n",
-    "    for i in range(3):\n",
-    "        name = './IMG/'+sample[i].split('/')[-1]\n",
-    "        img = cv2.imread(name)\n",
-    "        #img = cv2.resize(img, (80,40))\n",
-    "        #img = img[:,:,2] #choose S channel          \n",
-    "        images.append(img)\n",
-    "        images.append(cv2.flip(img,1))                                      \n",
-    "                    \n",
-    "        if(i== 0):                        \n",
-    "            angles.append(center_angle)\n",
-    "            angles.append(center_angle* -1)\n",
-    "        if(i == 1):\n",
-    "            angles.append(center_angle + angle_correct)\n",
-    "            angles.append((center_angle + angle_correct)* -1)                     \n",
-    "        if(i== 2):\n",
-    "            angles.append(center_angle - angle_correct)\n",
-    "            angles.append((center_angle - angle_correct)* -1)\n",
-    "                        \n",
-    "            # trim image to only see section with road\n",
-    "X_train = np.array(images)\n",
-    "y_train = np.array(angles)\n",
+    "def preprocess(samples):\n",
+    "    images = []\n",
+    "    angles = []\n",
+    "    for sample in samples:\n",
+    "        center_angle = float(sample[3])\n",
+    "        for i in range(3):\n",
+    "            name = './IMG/' + sample[i].split('/')[-1]\n",
+    "            img = cv2.imread(name)\n",
+    "            images.append(img)\n",
+    "            images.append(cv2.flip(img,1))                                                 \n",
+    "            if(i== 0):                        \n",
+    "                angles.append(center_angle)\n",
+    "                angles.append(center_angle* -1)\n",
+    "            if(i == 1):\n",
+    "                angles.append(center_angle + angle_correct)\n",
+    "                angles.append((center_angle + angle_correct)* -1)                     \n",
+    "            if(i== 2):\n",
+    "                angles.append(center_angle - angle_correct)\n",
+    "                angles.append((center_angle - angle_correct)* -1)\n",
+    "                \n",
+    "    return (np.array(images), np.array(angles))\n",
     "\n",
+    "(X_train, y_train) = preprocess(samples)\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:7: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(24, (5, 5), activation=\"relu\", strides=(2, 2), padding=\"same\")`\n",
+      "  import sys\n",
+      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:9: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(32, (5, 5), activation=\"relu\", strides=(2, 2), padding=\"same\")`\n",
+      "  if __name__ == '__main__':\n",
+      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:11: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(48, (5, 5), activation=\"relu\", strides=(2, 2), padding=\"same\")`\n",
+      "  # This is added back by InteractiveShellApp.init_path()\n",
+      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:13: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(64, (3, 3), activation=\"relu\", strides=(1, 1), padding=\"same\")`\n",
+      "  del sys.path[0]\n",
+      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:15: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(64, (3, 3), activation=\"relu\", strides=(1, 1), padding=\"same\")`\n",
+      "  from ipykernel import kernelapp as app\n",
+      "/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/keras/models.py:874: UserWarning: The `nb_epoch` argument in `fit` has been renamed `epochs`.\n",
+      "  warnings.warn('The `nb_epoch` argument in `fit` '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 27637 samples, validate on 3071 samples\n",
+      "Epoch 1/8\n",
+      "27637/27637 [==============================] - 369s 13ms/step - loss: 0.0372 - val_loss: 0.0459\n",
+      "Epoch 2/8\n",
+      "27637/27637 [==============================] - 372s 13ms/step - loss: 0.0313 - val_loss: 0.0473\n",
+      "Epoch 3/8\n",
+      "27637/27637 [==============================] - 362s 13ms/step - loss: 0.0299 - val_loss: 0.0452\n",
+      "Epoch 4/8\n",
+      "27637/27637 [==============================] - 360s 13ms/step - loss: 0.0292 - val_loss: 0.0461\n",
+      "Epoch 5/8\n",
+      "27637/27637 [==============================] - 352s 13ms/step - loss: 0.0279 - val_loss: 0.0435\n",
+      "Epoch 6/8\n",
+      "27637/27637 [==============================] - 331s 12ms/step - loss: 0.0269 - val_loss: 0.0414\n",
+      "Epoch 7/8\n",
+      "27637/27637 [==============================] - 346s 13ms/step - loss: 0.0261 - val_loss: 0.0443\n",
+      "Epoch 8/8\n",
+      "27637/27637 [==============================] - 365s 13ms/step - loss: 0.0255 - val_loss: 0.0455\n"
+     ]
+    }
+   ],
+   "source": [
     "from keras.models import Sequential, Model\n",
     "from keras.layers import Flatten, Dense, Lambda, Cropping2D, Lambda, Convolution2D, Dropout, MaxPooling2D\n",
     "\n",
@@ -128,9 +137,7 @@
     "history_object = model.fit(X_train, y_train, batch_size=32, nb_epoch=8,\n",
     "                  shuffle=True, verbose=1, validation_split = 0.1)\n",
     "       \n",
-    "model.save('model.h5')\n",
-    "          \n",
-    "       "
+    "model.save('model.h5')"
    ]
   },
   {
